<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">myFamily</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_add_family">AddFamilyActivity</string>

    <color name="light_blue">#579AE6</color>
    <color name="blue">#0000FF</color>
    <color name="white">#ffffff</color>
    <color name="light_gray">#777777</color>
    <color name="transparent">#00000000</color>
    <color name="black">#000000</color>
    <color name="green">#55CC44</color>
    <color name="yellow">#FFFF80</color>
    <color name="darkGreen">#44A436</color>
    <color name="very_light_gray">#C3C3C3</color>

    <string-array name="colors">
        <item>czerwony</item>
        <item>niebieski</item>
        <item>zielony</item>
        <item>purpurowy</item>
        <item>żółty</item>
    </string-array>
    <string-array name="categories">
        <item>Sprzątanie</item>
        <item>Gotowanie</item>
        <item>Zakupy</item>
    </string-array>

    <string name="title_activity_notes">NotesActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_nazwa">NazwaActivity</string>
    <string name="title_activity_mainnn">MainnnActivity</string>
    <string name="title_activity_my_family_list">MyFamilyList</string>
    <string name="title_activity_new_event">NewEventActivity</string>
    <string name="title_activity_add_family_users">AddFamilyUsersActivity</string>
    <string name="title_activity_add_user">AddUserActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_user_register">UserRegister</string>
    <string name="title_activity_new_account">NewAccountActivity</string>
    <string name="title_activity_create_new_family">CreateNewFamilyActivity</string>
    <string name="title_activity_fragment_old_tasks">FragmentOldTasks</string>
    <string name="title_activity_fragment_current_tasks">FragmentCurrentTasks</string>
    <string name="title_activity_old_tasks_fragment">OldTasksFragment</string>
    <string name="title_activity_tasks">TasksActivity</string>
    <string name="title_activity_tasks1">TasksActivity</string>
    <string name="addUser">Dodaj</string>
    <string name="removeUser">Usuń</string>
    <string name="familyName">nazwa rodziny</string>
    <string name="familyPass">hasło rodziny</string>
    <string name="loginText">zaloguj</string>
    <string name="login_prompt">nazwa nowego użytkownika</string>
    <string name="password_prompt">hasło nowego użytkownika</string>
    <string name="userName">nazwa użytkownika</string>
    <string name="userPass">hasło użytkownika</string>
    <string name="new_account_text"><b><u>utwórz rodzine</u></b></string>
    <string name="hint">podpowiedz</string>
    <string name="confirmUserPass">powtórz hasło</string>
    <string name="userRegisterText">utwórz konto</string>
    <string name="createAccount">załóż konto</string>
    <string name="familiList">Rodziny, do których należysz:</string>
    <string name="onlyVoted">Ocenione</string>
    <string name="onlyNotVoted">Nie ocenione</string>
    <string name="onlyForMe">Ode mnie</string>
    <string name="onlyFromMe">Dla mnie</string>
    <string name="title_activity_expense">ExpenseActivity</string>
    <string name="title_activity_shopping">ShoppingActivity</string>
    <string name="title_activity_prizes">PrizesActivity</string>
    <string name="title_activity_fragment__prize">Fragment_Prize</string>
    <string name="title_activity_fragment_my_prize">FragmentMyPrize</string>
    <string name="title_activity_event_view">EventViewActivity</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_add_product">AddProductActivity</string>
    <string name="title_activity_family_list">FamilyListActivity</string>

    <string-array name="users_type">
        <item>rodzic</item>
        <item>dziecko</item>
    </string-array>

    <string name="title_activity_fragment_prize">FragmentPrize</string>
    <string name="title_activity_fragment_add_prize">FragmentAddPrize</string>
    <string name="title_activity_prize">PrizeActivity</string>
    <string name="title_activity_taks">TaksActivity</string>
    <string name="title_activity_fragment_old_task">FragmentOldTask</string>
    <string name="title_activity_picture">PictureActivity</string>
    <string name="title_activity_galery">GaleryActivity</string>
    <string name="title_activity_utils">UtilsActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_photos_management">PhotosManagementActivity</string>

</resources>