<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <EditText
		   android:id="@+id/userNameEditText"
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content"
		   android:background="@drawable/oval_edit_text"
		   android:layout_margin="10dp"
		   android:hint="@string/userName"
		   android:padding="10dp"
		/>
        
        <EditText
		   android:id="@+id/userPasswordEditText"
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content"
		   android:inputType="textPassword"
		   android:layout_margin="10dp"
		   android:padding="10dp"
		   android:hint="@string/userPass"
		   android:background="@drawable/oval_edit_text"
		/>
        
        <EditText
		   android:id="@+id/userConfirmPasswordEditText"
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content"
		   android:inputType="textPassword"
		   android:layout_margin="10dp"
		   android:padding="10dp"
		   android:hint="@string/confirmUserPass"
		   android:background="@drawable/oval_edit_text"
		/>

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/oval_button_selector"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/userRegisterText" />
        
    </LinearLayout>

</RelativeLayout>